--- a/web_app/static/css/base_css.css
+++ b/web_app/static/css/base_css.css
@@ -1,6 +1,11 @@
 #search {
-  width: 250px;
-  height: 22px;
+  width: 220px;
+  height: 30px;
+  position:absolute;
+  
+  top:40px;
+  left:10px;
+  
   display: inline-block;
   font-family: arial,sans-serif;
   font-size: 11px;
@@ -29,8 +34,16 @@
 }
 
 #refreshtable {
-  width: 250px;
-  height: 22px;
+
+  
+  top:40px;
+  left:245px;
+
+  position:absolute;
+
+  width: 220px;
+  height: 30px;
+  
   display: inline-block;
   font-family: arial,sans-serif;
   font-size: 11px;
@@ -60,17 +73,16 @@
 
 
 table {
-    position:relative;
-    top: -6%;
-    table-layout: auto;
-    overflow:hidden;
+    
+    top: 3%;
+    table-layout: fixed;
+    overflow:scroll;
     border:1px solid #d3d3d3;
     background:#fefefe;
-    width:100%;
     margin:5% auto 0;
     -moz-border-radius:5px; /* FF1+ */
     -webkit-border-radius:5px; /* Saf3-4 */
-    border-radius:5px;
+    border-radius:20px;
     -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
 }
